clean up knockouts count threshold config parameter logic - now required only for fully-automatic discovery

--- a/knockout_ios/config/credit_app_multiple_negative.json
+++ b/knockout_ios/config/credit_app_multiple_negative.json
@@ -7,6 +7,5 @@
     "Ban client forever"
   ],
   "positive_outcomes": [],
-  "known_ko_activities": [],
-  "ko_count_threshold": 7
+  "known_ko_activities": []
 }
