--- a/knockout_ios/config/credit_app_nested_rework.json
+++ b/knockout_ios/config/credit_app_nested_rework.json
@@ -8,6 +8,5 @@
   "positive_outcomes": [
     "Make credit offer"
   ],
-  "known_ko_activities": [],
-  "ko_count_threshold": 6
+  "known_ko_activities": []
 }
