--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ __pycache__
 .idea
 venv/
 **/cache/**
+knockout_ios/inputs/BPI Challenge 2017_1K_filtered.xes
+knockout_ios/inputs/BPI Challenge 2017_8K_filtered.xes
