--- a/knockout_ios/config/credit_app_simple_known_ko.json
+++ b/knockout_ios/config/credit_app_simple_known_ko.json
@@ -2,10 +2,10 @@
   "log_path": "./inputs/credit_app_simplified.xes",
   "output": "./outputs",
   "start_activity": "Start",
-  "negative_outcomes": [
+  "post_knockout_activities": [
     "Notify rejection"
   ],
-  "positive_outcomes": [],
+  "success_activities": [],
   "known_ko_activities": [
     "Assess application"
   ]
