--- a/knockout_ios/config/credit_app_multiple_negative.json
+++ b/knockout_ios/config/credit_app_multiple_negative.json
@@ -2,10 +2,10 @@
   "log_path": "./inputs/credit_app_multiple_negative.xes",
   "output": "./outputs",
   "start_activity": "Start",
-  "negative_outcomes": [
+  "post_knockout_activities": [
     "Reject application",
     "Ban client forever"
   ],
-  "positive_outcomes": [],
+  "success_activities": [],
   "known_ko_activities": []
 }
