--- a/knockout_ios/config/credit_app_nested_rework_2.json
+++ b/knockout_ios/config/credit_app_nested_rework_2.json
@@ -2,10 +2,10 @@
   "log_path": "./inputs/credit_app_nested_rework_2.xes",
   "output": "./outputs",
   "start_activity": "Start",
-  "negative_outcomes": [
+  "post_knockout_activities": [
     "Reject application"
   ],
-  "positive_outcomes": [
+  "success_activities": [
     "Make credit offer"
   ],
   "known_ko_activities": []
