--- a/knockout_ios/config/loan_app.json
+++ b/knockout_ios/config/loan_app.json
@@ -2,8 +2,8 @@
   "log_path": "./inputs/LoanApplicationDemo.xes",
   "output": "./outputs",
   "start_activity": "Start",
-  "negative_outcomes": [],
-  "positive_outcomes": [],
+  "post_knockout_activities": [],
+  "success_activities": [],
   "known_ko_activities": [],
   "ko_count_threshold": 3
 }
