--- a/requirements.txt
+++ b/requirements.txt
@@ -83,8 +83,8 @@ traitlets==5.1.1
 typing_extensions==4.1.1
 wcwidth==0.2.5
 wittgenstein==0.3.2
-swifter~=1.1.2
-setuptools~=60.9.3
-DateTimeRange~=1.2.0
+swifter==1.1.3
+setuptools==60.9.3
+DateTimeRange==1.2.0
 streamlit==1.9.0
 shutup==0.2.0
