--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Run full test suite (pytest parallel)
         run: |
-          SET RUNNING_TESTS=true
+          export RUNNING_TESTS=true
           cd knockout_ios
           pytest . -x -n auto --disable-warnings
 
