improve ROC curve plots and AUC scores

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,6 +1,6 @@
 # Based on: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Build & Test on Windows and Linux (Latest)
+name: Build & Test on Windows and Linux
 
 on:
   push:
@@ -45,7 +45,7 @@ jobs:
 
       - name: Run full test suite (pytest parallel)
         run: |
-          export RUNNING_TESTS=true
+          export RUNNING_TESTS=1
           cd knockout_ios
           pytest . -x -n auto --disable-warnings
 
@@ -80,12 +80,12 @@ jobs:
 
       - name: Pre-flight check (test only pipeline)
         run: |
-          SET RUNNING_TESTS=true
+          SET RUNNING_TESTS=1
           cd knockout_ios
           pytest -m "pipeline" --disable-warnings
 
       - name: Run full test suite (pytest parallel)
         run: |
-          SET RUNNING_TESTS=true
+          SET RUNNING_TESTS=1
           cd knockout_ios
           pytest . -x -n auto --disable-warnings
