attempt to fix env variable issue for github action on windows

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,6 +7,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+env:
+  RUNNING_TESTS: 1
 
 jobs:
   build-test-ubuntu:
@@ -39,13 +41,11 @@ jobs:
 
       - name: Pre-flight check (test only pipeline)
         run: |
-          export RUNNING_TESTS=true
           cd knockout_ios
           pytest -m "pipeline" --disable-warnings
 
       - name: Run full test suite (pytest parallel)
         run: |
-          export RUNNING_TESTS=1
           cd knockout_ios
           pytest . -x -n auto --disable-warnings
 
@@ -80,12 +80,10 @@ jobs:
 
       - name: Pre-flight check (test only pipeline)
         run: |
-          SET RUNNING_TESTS=1
           cd knockout_ios
           pytest -m "pipeline" --disable-warnings
 
       - name: Run full test suite (pytest parallel)
         run: |
-          SET RUNNING_TESTS=1
           cd knockout_ios
           pytest . -x -n auto --disable-warnings
