--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,6 +1,6 @@
 # Based on: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Build & Test on Windows and Linux
+name: CI
 
 on:
   push:
